--- a/templates/index.html
+++ b/templates/index.html
@@ -1,58 +1,56 @@
 {% extends '_base.html' %}
 
-{% block header_content %}
+{% block outer_content %}
 <header>
+    <div class="header-wrapper">
+        <img src="assets/logo36.png" />
+
+        <h1>Pixelcite</h1>
+    </div>
+</header>
+
+<div class="content">
+    <div class="poster-wrapper">
+        <div class="poster quote sixteen-by-nine">
+            <span class="left-quote">&ldquo;</span>
+            <blockquote><p></p></blockquote>
+
+            <p class="source"></p>
+            <p class="show-credit"></p>
+
+            <p class="logo-wrapper">
+                <img class="logo" src="assets/logo36.png" />
+            </p>
+        </div>
+    </div>
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <h1>{{ COPY.content.project_name|smarty }}</h1>
-                <h2>{{ COPY.content.lorem_ipsum|smarty }}</h2>
+            <div class="form controls col-md-12">
+                <div class="controls-wrapper">
+                    <div class="form-group">
+                        <p>Create quote images perfect for sharing on Twitter or Facebook. Just edit the text to the left, adjust the font size if needed and then click "Save image." The image will be downloaded to your computer and from there you can use your regular Twitter client to upload it.</p>
+                    </div>
+                    <div class="form-group">
+                        <label for="fontsize">Font Size</label>
+                        <input id="fontsize" name="fontsize" type="range" min="24" max="120" value="32">
+                    </div>
+                    <div class="form-group">
+                        <button id="save" class="btn btn-lg btn-primary">Save image</button>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
-</header>
-{% endblock %}
-
-
-{% block content %}
-<h1>{{ COPY.content.project_name }}</h1>
-
-<div id="story-meta">
-    <p class="byline">by <span>{{ COPY.content.byline }}</span></p>
-    <p class="dateblock">
-        <span class="date">{{ COPY.content.pubdate }}</span>
-        <span class="time"> {{ COPY.content.pubtime }}</span>
-    </p>
 </div>
 
-<a class="comment-button comment-button-bubble comment-drawer-toggle" href="javascript:">
-    <span class="comment-count"></span>
-</a>
-
-<a class="comment-button comment-button-article comment-drawer-toggle" data-toggle="modal" data-backdrop="static" data-target="#share-modal">
-    <span class="comment-count"></span>
-    <span class="comment-label">Share / Discuss</span>
-</a>
-
-<h2>Example COPY list</h2>
-<dl>
-    {% for row in COPY.example_list %}
-    <dt>{{ row.term }}</dt><dd>{{ row.definition }}</dd>
-    {% endfor %}
-</dl>
-
-<h2>JST example</h2>
-<p id="template-example"></p>
-{% endblock %}
-
-
-{% block wide_content %}
-<div class="row">
-    <div class="col-md-12">
-        <h2>{{ COPY.content.footer_title }}</h2>
-        <p>{{ COPY.content.lorem_ipsum }}</p>
+<div class="container">
+    <div class-"row">
+        <div class="col-md-12">
+            Support this site, buy a book
+        </div>
     </div>
 </div>
+
 {% endblock %}
 
-{% include '_share_modal.html' %}
