--- a/templates/_base.html
+++ b/templates/_base.html
@@ -27,12 +27,12 @@
     {% block outer_content %}
     {% endblock outer_content %}
 
+    <script type="text/javascript" src="js/lib/medium-editor.js"></script>
+    <script type="text/javascript" src="js/lib/html2canvas.js"></script>
     {{ JS.push('js/lib/jquery.js') }}
     {{ JS.push('js/lib/underscore.js') }}
     {{ JS.push('js/lib/bootstrap.js') }}
     {{ JS.push('js/lib/moment.js') }}
-    {{ JS.push('js/lib/medium-editor.js') }}
-    {{ JS.push('js/lib/html2canvas.js') }}
     {{ JS.push('js/app_config.js') }}
     {{ JS.push('js/copy.js') }}
     {{ JS.push('js/console.js') }}
