--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,11 @@
                 <div class="controls-wrapper">
                     <div class="form-group">
                         <p>Create quote images perfect for sharing on Twitter or Facebook. Just edit the text to the left, adjust the font size if needed and then click "Save image." The image will be downloaded to your computer and from there you can use your regular Twitter client to upload it.</p>
+                        {% if session.oauth_token %}
+                        Logged in as {{ session.screen_name }} 
+                        {% else %}
+                        <a href="/authenticate/"><i class="fa fa-twitter"></i> Login with Twitter</a>
+                        {% endif %}
                     </div>
                     <div class="form-group">
                         <label for="fontsize">Font Size</label>
