--- a/templates/index.html
+++ b/templates/index.html
@@ -41,8 +41,8 @@
                     </div>
                     <div class="form-group">
                         <button id="save" class="btn btn-lg btn-primary">Save image</button>
+                        <a href="/post/" id="post" class="btn btn-lg">Tweet</button>
                     </div>
-
                 </div>
             </div>
         </div>
