Image tweet button.

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="form-group">
                         <button id="save" class="btn btn-lg btn-primary">Save image</button>
-                        <a href="/post/" id="post" class="btn btn-lg">Tweet</button>
+                        <button id="tweet" class="btn btn-lg btn-default"><i class="fa fa-twitter"></i> Tweet</button>
                     </div>
                 </div>
             </div>
