--- a/less/app.less
+++ b/less/app.less
@@ -175,6 +175,10 @@ header {
             -webkit-font-smoothing: antialiased;
             font-family: @font-family-serif;
         }
+
+        .login-wrapper {
+            float: right;
+        }
 	}
 }
 
