--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,15 @@
     <div class="header-wrapper">
         <img src="assets/logo36.png" />
 
-        <h1>Pixelcite</h1>
+        <h1>pixelcite <small>share quotes on Twitter</small></h1>
+
+        <div class="login-wrapper">
+            {% if session.oauth_token %}
+            Logged in as {{ session.screen_name }} (<a href="/logout/">Logout</a>) 
+            {% else %}
+            <a class="btn btn-primary" href="/authenticate/"><i class="fa fa-twitter"></i> Login with Twitter</a>
+            {% endif %}
+        </div>
     </div>
 </header>
 
@@ -28,20 +36,32 @@
             <div class="form controls col-md-12">
                 <div class="controls-wrapper">
                     <div class="form-group">
-                        <p>Create quote images perfect for sharing on Twitter or Facebook. Just edit the text to the left, adjust the font size if needed and then click "Save image." The image will be downloaded to your computer and from there you can use your regular Twitter client to upload it.</p>
-                        {% if session.oauth_token %}
-                        Logged in as {{ session.screen_name }} (<a href="/logout/">Logout</a>) 
-                        {% else %}
-                        <a href="/authenticate/"><i class="fa fa-twitter"></i> Login with Twitter</a>
-                        {% endif %}
+                        <label for="quotetext">Quote</label>
+                        <textarea id="quote" name="quote"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="author">Author</label>
+                        <input id="author" name="author" />
+                    </div>
+                    <div class="form-group">
+                        <label for="source">Source</label>
+                        <input id="source" name="source" />
+                    </div>
+                    <div class="form-group">
+                        <label for="comment">Comment</label>
+                        <input id="comment" name="comment">
                     </div>
                     <div class="form-group">
                         <label for="fontsize">Font Size</label>
-                        <input id="fontsize" name="fontsize" type="range" min="24" max="120" value="32">
+                        <input id="fontsize" name="fontsize" type="range" min="24" max="120" value="32" />
                     </div>
                     <div class="form-group">
-                        <button id="save" class="btn btn-lg btn-primary">Save image</button>
-                        <button id="tweet" class="btn btn-lg btn-default"><i class="fa fa-twitter"></i> Tweet</button>
+                        <label for="url">URL</label>
+                        <input id="url" name="url" type="url" />
+                    </div>
+                    <div class="form-group">
+                        <button id="tweet" class="btn btn-lg btn-primary"><i class="fa fa-twitter"></i> Tweet</button>
+                        <button id="save" class="btn btn-lg btn-default">Save image</button>
                     </div>
                 </div>
             </div>
