--- a/templates/index.html
+++ b/templates/index.html
@@ -60,19 +60,15 @@
                         <input id="url" name="url" type="url" />
                     </div>
                     <div class="form-group">
+                        {% if session.oauth_token %}
                         <button id="tweet" class="btn btn-lg btn-primary"><i class="fa fa-twitter"></i> Tweet</button>
-                        <button id="save" class="btn btn-lg btn-default">Save image</button>
+                        {% else %}
+                        <a class="btn btn-lg btn-primary" href="/authenticate/"><i class="fa fa-twitter"></i> Login to Tweet</a>
+                        {% endif %}
+                        <button id="save" class="btn btn-lg btn-default"><i class="fa fa-download"></i> Save image</button>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <div class-"row">
-        <div class="col-md-12">
-            Support this site, buy a book
         </div>
     </div>
 </div>
