Display screen name and status.

--- a/less/app.less
+++ b/less/app.less
@@ -42,6 +42,14 @@ body {
     padding-left: 0px;
 }
 
+.status {
+    margin: @line-height-computed;
+
+    .user {
+        color: @gray;
+    }
+}
+
 .poster {
 	height: 360px;
 	width: 640px;
