Add credits. Closes #33. Closes #34. Closes #35.

--- a/less/app.less
+++ b/less/app.less
@@ -11,7 +11,17 @@ html {
 
 body {
 	background: @gray-lighter;
-	min-width: 680px;
+}
+
+#page-wrap {
+    min-height: 100%;
+    height: auto !important;
+    margin: 0 auto -30px;
+    padding: 0 0 30px;
+}
+
+#footer, #push {
+    height: 30px;
 }
 
 #header {
