--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 {% extends '_base.html' %}
 
 {% block outer_content %}
+<div id="page-wrap">
+
 <div id="header" class="container">
     <div class="row">
         <div class="col-md-12">
@@ -75,10 +77,16 @@
                 </div>
             </div>
         </div>
-
-
     </div>
 </div>
 
+<div id="push"></div>
+</div>
+
+<div id="footer">
+    <div class="container">
+        Made by <a href="https://twitter.com/onyxfish">@onxyfish</a>, &copy; 2014 &mdash; Inspired by <a href="https://twitter.com/nprviz">@nprviz</a>'s <a href="https://github.com/nprapps/quotable">quotable</a> &mdash; Send feedback or inquiries to <a href="mailto:pixelcite@gmail.com">pixelcite@gmail.com</a>
+    </div>
+</div>
 {% endblock %}
 
