--- a/templates/_base.html
+++ b/templates/_base.html
@@ -5,7 +5,10 @@
     <title>{{ COPY.content.project_name }}</title>
 
     <!-- META TAGS -->
-    {% include '_meta.html' %}
+    <meta name="description" content="{{ COPY.share.meta_description }}">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <!-- CSS -->
     {{ CSS.push('less/app.less') }}
@@ -16,18 +19,19 @@
     {{ JS.push('js/lib/modernizr.js') }}
     {{ JS.render('js/app-header.min.js') }}
 
-    {% include '_social_tags.html' %}
+    <!-- SOCIAL -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="{{ COPY.share.twitter_handle }}">
+    <meta name="twitter:image" content="{{ COPY.share.twitter_image_url }}" />
 
     {% block extra_head %}
     {% endblock extra_head %}
 </head>
 <body>
-    <a class="sr-only" href="#content">Skip To Content</a>
-
     {% block outer_content %}
     {% endblock outer_content %}
 
-    <script type="text/javascript" src="{{ S3_BASE_URL }}/js/lib/html2canvas.js"></script>
+    <script type="text/javascript" src="{{ S3_BASE_URL }}/js/lib/html2canvas.min.js"></script>
 
     {{ JS.push('js/lib/jquery.js') }}
     {{ JS.push('js/lib/underscore.js') }}
@@ -39,10 +43,19 @@
     {{ JS.push('js/templates.js') }}
     {{ JS.push('js/app.js') }}
     {% block extra_foot_js %}{% endblock extra_foot_js %}
-    {{ JS.push('js/analytics.js') }}
     {{ JS.render('js/app-footer.min.js') }}
 
     {% block extra_foot %}
     {% endblock extra_foot %}
+
+    <script type="text/javascript">
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', APP_CONFIG.GOOGLE_ANALYTICS.ACCOUNT_ID, 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
 </html>
