Image branding. Closes #4.

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,9 +63,10 @@
 
                 <p class="attribution"></p>
 
-                <p class="logo-wrapper">
+                <div class="logo-wrapper">
                     <img class="logo" src="{{ S3_BASE_URL }}/assets/logo36.png" />
-                </p>
+                    <h1>pixelcite.com</h1>
+                </div>
             </div>
             <div class="buttons">
                 <div class="pull-right">
