--- a/less/app.less
+++ b/less/app.less
@@ -123,17 +123,24 @@ body {
 		bottom: 0;
 		right: 0;
 		text-align: right;
-		padding:  @grid-gutter-width @grid-gutter-width * 2 @grid-gutter-width * 2;
+        vertical-align: bottom;
+		padding: 0 @grid-gutter-width @grid-gutter-width @grid-gutter-width;
 		margin: 0;
-		font-size: 46px;
-		background: #fff;
 
         .logo {
             display: inline-block !important;
-            border: none;
+            vertical-align: bottom;
 
-            height: 40px;
-            width: auto;
+            height: 24px;
+            width: 24px;
+            margin-right: -4px;
+        }
+
+        h1 {
+            display: inline-block !important;
+            margin: 0;
+            padding: 0;
+            font-size: 24px;
         }
 	}
 }
