Nicer sample card.

--- a/less/app.less
+++ b/less/app.less
@@ -79,12 +79,11 @@ body {
         top: @grid-gutter-width;
         left: @grid-gutter-width;
         font-weight: 700;
-        margin-left: -0.55em;
     }
 
 	blockquote {
 		padding: 0;
-		margin: 0 0 20px;
+		margin: 0 @grid-gutter-width @grid-gutter-width 0.55em;
 		border-left: none;
 		font-size: inherit;
 		line-height: 100%;
@@ -114,6 +113,8 @@ body {
 		line-height: 1.3;
 		display: block;
 		margin-top: 0;
+        text-align: right;
+        margin-right: @grid-gutter-width * 2;
 	}
 
 	.logo-wrapper {
@@ -121,10 +122,9 @@ body {
 		width: 100%;
 		z-index: 100;
 		bottom: 0;
-		right: 0;
-		text-align: right;
+		left: 0;
         vertical-align: bottom;
-		padding: 0 @grid-gutter-width @grid-gutter-width @grid-gutter-width;
+		padding: 0 0 @grid-gutter-width @grid-gutter-width;
 		margin: 0;
 
         .logo {
