Fix logo placement. Closes #49.

--- a/less/app.less
+++ b/less/app.less
@@ -128,17 +128,20 @@ body {
 		margin: 0;
 
         .logo {
-            display: inline-block !important;
+            display: block !important;
+            float: left;
             vertical-align: bottom;
 
             height: 24px;
             width: 24px;
-            margin-right: -4px;
+            margin-top: 3px;
         }
 
         h1 {
-            display: inline-block !important;
-            margin: 0;
+            display: block !important;
+            float: left;
+
+            margin: 0 0 0 5px;
             padding: 0;
             font-size: 24px;
         }
