--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
             <h1>Pixelcite <small>Quotations for Twitter</small></h1>
 
             <div class="pull-right">
-                {% if session.oauth_token %}
+                {% if session.screen_name %}
                 Logged in as {{ session.screen_name }} (<a href="/logout/">Logout</a>) 
                 {% else %}
                 <button id="login" class="btn btn-primary"><i class="fa fa-twitter"></i> Login with Twitter</button>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="form-group">
                     <label for="quotetext">Quote</label>
-                    <textarea id="quote" name="quote" class="form-control"></textarea>
+                    <textarea id="quote" name="quote" class="form-control" rows="4"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="source">Author / Source</label>
@@ -40,7 +40,7 @@
                 </div>
                 <div class="form-group">
                     <label for="fontsize">Font Size</label>
-                    <input id="fontsize" name="fontsize" class="form-control"  type="range" min="24" max="120" value="32" />
+                    <input id="fontsize" name="fontsize" class="form-control"  type="range" min="18" max="120" value="32" />
                 </div>
                 <div class="form-group">
                     <label for="url">Source URL (Amazon, etc.)</label>
@@ -87,7 +87,7 @@
 
 <div id="footer">
     <div class="container">
-        Made by <a href="https://twitter.com/onyxfish">@onxyfish</a>, &copy; 2014 &middot; Inspired by <a href="https://twitter.com/nprviz">@nprviz</a>'s <a href="https://github.com/nprapps/quotable">quotable</a> &middot; This site stores no user data. &middot; Send feedback or inquiries to <a href="mailto:pixelcite@gmail.com">pixelcite@gmail.com</a>
+        Made by <a href="https://twitter.com/onyxfish">@onxyfish</a>, &copy; 2014. &middot; Inspired by <a href="https://twitter.com/nprviz">@nprviz</a>'s <a href="https://github.com/nprapps/quotable">quotable</a>. &middot; This site stores no user data. &middot; Send feedback or inquiries to <a href="mailto:pixelcite@gmail.com">pixelcite@gmail.com</a>.
     </div>
 </div>
 {% endblock %}
