Clean up footer.

--- a/less/app.less
+++ b/less/app.less
@@ -24,6 +24,10 @@ body {
     height: 30px;
 }
 
+#footer .container {
+    text-align: center;
+}
+
 #header {
 	background: @gray-lighter;
     margin-top: @grid-gutter-width;
