--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
 
 <div id="footer">
     <div class="container">
-        Made by <a href="https://twitter.com/onyxfish">@onxyfish</a>, &copy; 2014. &middot; Inspired by <a href="https://twitter.com/nprviz">@nprviz</a>'s <a href="https://github.com/nprapps/quotable">quotable</a>. &middot; This site stores no user data. &middot; Send feedback or inquiries to <a href="mailto:pixelcite@gmail.com">pixelcite@gmail.com</a>.
+        Made by <a href="https://twitter.com/onyxfish">@onxyfish</a>, &copy; 2014.&nbsp;&nbsp;&middot;&nbsp;&nbsp;Inspired by <a href="https://twitter.com/nprviz">@nprviz</a>'s <a href="https://github.com/nprapps/quotable">quotable</a>.&nbsp;&nbsp;&middot;&nbsp;&nbsp;This site stores no user data.&nbsp;&nbsp;&middot;&nbsp;&nbsp;Send feedback or inquiries to <a href="mailto:pixelcite@gmail.com">pixelcite@gmail.com</a>.
     </div>
 </div>
 {% endblock %}
