--- a/templates/_base.html
+++ b/templates/_base.html
@@ -23,6 +23,8 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="{{ COPY.share.twitter_handle }}">
     <meta name="twitter:image" content="{{ COPY.share.twitter_image_url }}" />
+    <meta name="twitter:description" content="{{ COPY.share.twitter_text }}" />
+    <meta name="twitter:title" content="{{ COPY.content.project_name }}" />
 
     {% block extra_head %}
     {% endblock extra_head %}
