--- a/templates/_base.html
+++ b/templates/_base.html
@@ -20,11 +20,11 @@
     {{ JS.render('js/app-header.min.js') }}
 
     <!-- SOCIAL -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="photo">
     <meta name="twitter:site" content="{{ COPY.share.twitter_handle }}">
-    <meta name="twitter:image" content="{{ COPY.share.twitter_image_url }}" />
-    <meta name="twitter:description" content="{{ COPY.share.twitter_text }}" />
-    <meta name="twitter:title" content="{{ COPY.content.project_name }}" />
+    <meta name="twitter:image:src" content="{{ COPY.share.twitter_image_url }}" />
+    <meta name="twitter:title" content="{{ COPY.share.twitter_text }}" />
+    <meta name="twitter:domain" content="{{ COPY.content.project_name }}" />
 
     {% block extra_head %}
     {% endblock extra_head %}
