Hide save image button on small screens.

--- a/less/app.less
+++ b/less/app.less
@@ -96,7 +96,7 @@ body {
 .controls {
     @media screen and (max-width: @screen-xs-max){
         .form-control {
-            width: @small-control-width;;
+            width: @small-control-width;
         }
     }
 }
@@ -227,5 +227,9 @@ body {
 
     @media screen and (max-width: @screen-xs-max){
         float: left;
+
+        #save {
+            display: none;
+        }
     }
 }
