--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
                     <li>Made by <a href="https://twitter.com/onyxfish">@onxyfish</a>, &copy; 2014.</li>
                     <li>Inspired by <a href="https://twitter.com/nprviz">@nprviz</a>'s <a href="https://github.com/nprapps/quotable">quotable</a>.</li>
                     <li>This site stores no user data.</li>
-                    <li>Send feedback or inquiries to <a href="mailto:pixelcite@gmail.com">pixelcite@gmail.com</a>.</li>
+                    <li>Send feedback or questions to <a href="mailto:pixelcite@gmail.com">pixelcite@gmail.com</a>.</li>
                 </ul>
             </div>
         </div>
