Add slide to adjust note. #54

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                     <input id="source" name="source" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label for="fontsize">Font Size</label>
+                    <label for="fontsize">Font Size (slide to adjust)</label>
                     <input id="fontsize" name="fontsize" class="form-control"  type="range" min="18" max="120" value="32" />
                 </div>
                 <div class="form-group">
